--- a/IntroProdVirtual.uproject
+++ b/IntroProdVirtual.uproject
@@ -38,6 +38,10 @@
 		{
 			"Name": "NiagaraFluids",
 			"Enabled": true
+		},
+		{
+			"Name": "NaniteDisplacedMesh",
+			"Enabled": true
 		}
 	]
 }
